Add some components to create deploy flow

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100" rel="stylesheet" type="text/css">
+    <title>Raúl Moya | Frontend Engineer & Javascript Developer</title>
   </head>
   <body>
     <noscript>
