--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100" rel="stylesheet" type="text/css">
-    <title>Raúl Moya | Frontend Engineer & Javascript Developer</title>
+    <title>%REACT_APP_WEBSITE_NAME%</title>
   </head>
   <body>
     <noscript>
