--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100" rel="stylesheet" type="text/css">
     <title>%REACT_APP_WEBSITE_NAME%</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100" rel="stylesheet" type="text/css">
+    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   </head>
   <body>
     <noscript>
