--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,17 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100" rel="stylesheet" type="text/css">
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-34226635-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-34226635-1');
+    </script>
+
   </head>
   <body>
     <noscript>
