--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,6 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>%REACT_APP_WEBSITE_NAME%</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,300,100" rel="stylesheet" type="text/css">
-    <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-34226635-1"></script>
     <script>
@@ -27,5 +24,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
+    <script async src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   </body>
 </html>
